<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">History Cleaner Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear_items">Clear Items</string>
    <string name="empty"></string>
    <string name="splash_loading">Loading&#8230;</string>
    <string name="clean_menu_save_as_profile">Save as Profile</string>
    <string name="clean_menu_select_all">Select All</string>
    <string name="clean_menu_select_none">Select None</string>
    <!-- <string name="clean_menu_settings">Settings</string> -->
    <string name="clean_menu_rate">Rate App</string>
    <string name="clean_menu_help">Help &amp; Support</string>
    <!--  -->
    <string name="title_activity_data_view">Data View</string>
    <string name="title_activity_clean">History Cleaner Pro</string>
    <string name="title_activity_profile">Profiles</string>
    <!--  -->
    <string name="profile_list_row_load">Load</string>
    <string name="profile_list_row_settings">Settings</string>
    <!--  -->
    <string name="profile_item_settings_timecaption">Run daily at:</string>
    <string name="profile_item_settings_placeholder">Automatic scheduling coming soon!</string>
    <string name="profile_item_settings_save">Save</string>
    <string name="profile_item_settings_cancel">Cancel</string>
    <string name="profile_item_settings_delete">Delete</string>
    <string name="test">}!{</string>
    <!--  -->
    <string name="app_plugin_name">History Cleaner</string>
    <!--  -->
    <string name="shortcut_create_selectprofile">Select Profile:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help">Help</string>

</resources>