<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/clean_menu_save_as_profile"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/clean_menu_save_as_profile"/>
    <item
        android:id="@+id/clean_menu_select_all"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/clean_menu_select_all"/>
    <item
        android:id="@+id/clean_menu_select_none"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/clean_menu_select_none"/>
    <!-- <item -->
    <!-- android:id="@+id/clean_menu_settings" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/clean_menu_settings"/> -->
    <item
        android:id="@+id/clean_menu_rate"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/clean_menu_rate"/>
    <item
        android:id="@+id/clean_menu_help"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/clean_menu_help"/>

</menu>